--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="blog about pictures of storms">
-  <script type="module" src="src/main.tsx"></script>
+  <script type="module" src="/src/main.tsx" defer></script>
   <link rel="shortcut icon" href="./fav.webp" type="image/x-icon">
   <title>Storm</title>
 </head>
